--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       text-align: center;
       font-family: 'Comic Sans MS', sans-serif;
       background: #a0d2eb;
-      background-image: url('https://i.imgur.com/qNKruVh.jpg'); /* Cloudy sky background */
+      background-image: url('https://i.pinimg.com/736x/bf/f9/e3/bff9e3235564e35dc48d6d56cef45e27.jpg'); /* Cloudy sky background */
       background-size: cover;
     }
     h1 {
@@ -39,8 +39,8 @@
   </style>
 </head>
 <body>
-  <h1>Hi, Beautiful!</h1>
-  <p>I have a little surprise for you, but you'll have to follow some playful friends first!</p>
+  <h1>Hi, Suruthi Venkatachalam!</h1>
+  <p>I have a little surprise for you, but you'll have to answer some questions first!</p>
   <img src="https://i.imgur.com/zzvh8zD.gif" alt="Cute jumping dog" width="200">
   <br><br>
   <button onclick="window.location.href='options.html'">Let’s Go!</button>
