--- a/options.html
+++ b/options.html
@@ -43,19 +43,19 @@
   </style>
 </head>
 <body>
-  <h1>Choose Your Animal Guide!</h1>
+  <h1>Choose Your Favourite Cuisine!</h1>
   <div class="options">
     <button onclick="window.location.href='final.html?animal=Dog'">
-      <img src="https://i.imgur.com/RLvNLx6.png" alt="Dog" class="animal">
-      Dog
+      <img src="https://tenor.com/search/street-food-gifs" alt="Egg" class="animal">
+      South Indian
     </button>
     <button onclick="window.location.href='final.html?animal=Cat'">
-      <img src="https://i.imgur.com/K3XQC9G.png" alt="Cat" class="animal">
-      Cat
+      <img src="https://www.icegif.com/pizza-23/" alt="little girl" class="animal">
+      Italian
     </button>
     <button onclick="window.location.href='final.html?animal=Rabbit'">
-      <img src="https://i.imgur.com/vOwRxQc.png" alt="Rabbit" class="animal">
-      Rabbit
+      <img src="https://giphy.com/explore/eating-baby-food" alt="Fried Rice" class="animal">
+      Chinese
     </button>
   </div>
 </body>
