--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <h1>Hi, Suruthi Venkatachalam!</h1>
   <p>I have a little surprise for you, but you'll have to answer some questions first!</p>
-  <img src="https://www.pinterest.com/pin/jinmiran-gif-jinmiran-discover-share-gifs--612911830535579989/" alt="rohee eating" width="200">
+  <img src="rohee eating.gif" alt="rohee eating" width="200">
   <br><br>
   <button onclick="window.location.href='options.html'">Arambikalama</button>
 </body>
