--- a/options.html
+++ b/options.html
@@ -46,15 +46,15 @@
   <h1>Choose Your Favourite Cuisine!</h1>
   <div class="options">
     <button onclick="window.location.href='final.html?animal=Dog'">
-      <img src="https://tenor.com/search/street-food-gifs" alt="Egg" class="animal">
+      <img src="street-food.gif" alt="Egg" class="animal">
       South Indian
     </button>
     <button onclick="window.location.href='final.html?animal=Cat'">
-      <img src="https://www.icegif.com/pizza-23/" alt="little girl" class="animal">
+      <img src="pizza.gif" alt="little girl" class="animal">
       Italian
     </button>
     <button onclick="window.location.href='final.html?animal=Rabbit'">
-      <img src="https://giphy.com/explore/eating-baby-food" alt="Fried Rice" class="animal">
+      <img src="chinese.gif" alt="Fried Rice" class="animal">
       Chinese
     </button>
   </div>
