--- a/final.html
+++ b/final.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
   <style>
     body {
       text-align: center;
-      font-family: 'Comic Sans MS', sans-serif;
+      font-family: 'Arial', sans-serif;
       background: #e6ffe6;
     }
     h1 {
@@ -42,12 +43,12 @@
 </head>
 <body>
   <h1>Your Lunch Invite: <span id="animal"></span>!</h1>
-  <img src="lunch.gif" alt="Animal Guide" class="animal" id="animalImage">
+  <img src="vijay.gif" alt="Animal Guide" class="animal" id="animalImage">
   <div class="message">
     <p>Thank you! I have a question for you...</p>
     <p>Will you join us for lunch?</p>
   </div>
-  <button onclick="alert('Can’t wait to see you!')">Yes</button>
+  <button onclick="handleResponse()">Yes</button>
 </body>
 <script>
   const params = new URLSearchParams(window.location.search);
@@ -59,5 +60,10 @@
     Chinese: 'chinese.gif',
   };
   document.getElementById('animalImage').src = animalImageMap[animal] || '';
+
+  function handleResponse() {
+    alert('Can’t wait to see you!');
+    window.location.href = 'thankyou.html';
+  }
 </script>
 </html>
