--- a/options.html
+++ b/options.html
@@ -3,55 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
+  <title>Pick Your Favorite</title>
   <style>
     body {
       text-align: center;
       font-family: 'Arial', sans-serif;
-      background: #a0d2eb;
-      background-image: url('https://i.pinimg.com/736x/bf/f9/e3/bff9e3235564e35dc48d6d56cef45e27.jpg'); /* Cloudy sky background */
-      background-size: cover;
+      background: #fff4e6;
     }
     h1 {
-      color: white;
-      margin-top: 50px;
-      text-shadow: 2px 2px #ffffff;
+      color: #ff8c00;
+      margin-top: 30px;
     }
-    p {
-      font-size: 18px;
-      color: #333;
+    .options {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
     }
     button {
-      padding: 15px 30px;
+      padding: 20px;
       font-size: 18px;
-      font-weight: bold;
-      background-color: #ff69b4;
+      background-color: #ff8c00;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 50%;
       cursor: pointer;
-      transition: transform 0.3s, background-color 0.3s;
+      box-shadow: 0 4px #d2691e;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
     button:hover {
-      transform: scale(1.1);
-      background-color: #ff1493;
+      transform: scale(1.2);
+      box-shadow: 0 6px #8b4513;
+    }
+    .animal {
+      display: block;
+      width: 100px;
+      margin: 10px auto 0;
     }
   </style>
 </head>
 <body>
-  <h1>Hi, Suruthi Venkatachalam!</h1>
-  <p>I have a little surprise for you, but you'll have to answer some questions first!</p>
-  <img src="rohee eating.gif" alt="rohee eating" width="200">
-  <br><br>
-  <button onclick="playSounds(); if (document.querySelector('body')) { window.location.href='options.html'; } else { console.error('Navigation target not found.'); }">Arambikalama</button>
-  <audio id="poppersSound" src="poppers.mp3"></audio>
-  <audio id="eatingSound" src="eating.mp3"></audio>
+  <h1>Choose Your Favourite Cuisine!</h1>
+
+  <!-- Audio element for the eating noise -->
+  <audio id="eatingSound" src="eatingchips.mp3" preload="auto"></audio>
+
+  <div class="options">
+    <button onclick="playSoundAndRedirect('final.html?animal=Dog')">
+      <img src="street-food.gif" alt="Egg" class="animal">
+      South Indian
+    </button>
+    <button onclick="playSoundAndRedirect('final.html?animal=Cat')">
+      <img src="pizza.gif" alt="little girl" class="animal">
+      Italian
+    </button>
+    <button onclick="playSoundAndRedirect('final.html?animal=Rabbit')">
+      <img src="chinese.gif" alt="Fried Rice" class="animal">
+      Chinese
+    </button>
+  </div>
+
   <script>
-    function playSounds() {
-      const poppersAudio = document.getElementById('poppersSound');
-      const eatingAudio = document.getElementById('eatingSound');
-      poppersAudio.play();
-      eatingAudio.play();
+    // Function to play sound and then redirect to the new page
+    function playSoundAndRedirect(url) {
+      const sound = document.getElementById('eatingSound');
+      sound.play();
+      setTimeout(function() {
+        window.location.href = url;
+      }, 500); // Delay the redirect to allow the sound to play
     }
   </script>
 </body>
